[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/enemies/skeletonGuard/walk/guard_spotted_f11.png" type="Texture" id=1]
[ext_resource path="res://scenes/enemies/spiderLikeThing/leg.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/enemies/spiderEnemy/body.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 4 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -52, 0 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FrontLegs" type="Node2D" parent="."]

[node name="leg" parent="FrontLegs" instance=ExtResource( 2 )]

[node name="leg2" parent="FrontLegs" instance=ExtResource( 2 )]

[node name="BackLegs" type="Node2D" parent="."]

[node name="leg" parent="BackLegs" instance=ExtResource( 2 )]
flipped = false

[node name="leg2" parent="BackLegs" instance=ExtResource( 2 )]
flipped = false

[node name="LowMidCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 200 )

[node name="HgihMidCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 200 )

[node name="FrontCheck" type="RayCast2D" parent="."]
position = Vector2( 50, 0 )
enabled = true
cast_to = Vector2( 0, 500 )

[node name="BackCheck" type="RayCast2D" parent="."]
position = Vector2( -52, 0 )
enabled = true
cast_to = Vector2( 0, 500 )
